--- a/webapp/app/partials/cubeDesigner/overview.html
+++ b/webapp/app/partials/cubeDesigner/overview.html
@@ -29,7 +29,7 @@
                     <!--Cube Name-->
                     <tr>
                         <th>Cube Name</th>
-                        <td class="tb-breakword">{{cubeMetaFrame.name}}</td>
+                        <td class="tb-breakword">{{cubesManager.cubeMetaFrame.name}}</td>
                     </tr>
                     <!--Fact Table-->
                     <tr>
@@ -46,12 +46,12 @@
                     <!--Dimensions-->
                     <tr>
                         <th>Dimensions</th>
-                        <td>{{cubeMetaFrame.dimensions.length}}</td>
+                        <td>{{cubesManager.cubeMetaFrame.dimensions.length}}</td>
                     </tr>
                     <!--Measures-->
                     <tr>
                         <th>Measures</th>
-                        <td>{{cubeMetaFrame.measures.length}}</td>
+                        <td>{{cubesManager.cubeMetaFrame.measures.length}}</td>
                     </tr>
                 </tbody>
             </table>
@@ -68,7 +68,7 @@
             </div>
             <div class="box-body">
                 <p class="muted">
-                    {{cubeMetaFrame.description}}
+                    {{cubesManager.cubeMetaFrame.description}}
                 </p>
             </div>
         </div>
