--- a/webapp/app/partials/modelDesigner/model_info.html
+++ b/webapp/app/partials/modelDesigner/model_info.html
@@ -32,14 +32,14 @@
 
                         <!-- edit -->
                         <input ng-if="state.mode=='edit'" name="model_name" type="text" class="form-control"
-                               ng-model="model.name" required
+                               ng-model="modelsManager.selectedModel.name" required
                                placeholder="You can use letters, numbers, and '_'"
                                ng-maxlength=100 ng-pattern="/^\w+$/" />
                         <small class="help-block" ng-show="forms.model_info_form.model_name.$error.required && (forms.model_info_form.model_name.$dirty||forms.model_info_form.$sbumitted)">Model name is required.</small>
                         <small class="help-block" ng-show="!forms.model_info_form.model_name.$error.required&&forms.model_info_form.model_name.$invalid && (forms.model_info_form.model_name.$dirty||forms.model_info_form.$sbumitted)">Model name is invalid.</small>
 
 
-                        <span ng-if="state.mode=='view'">{{model.name}}</span>
+                        <span ng-if="state.mode=='view'">{{modelsManager.selectedModel.name}}</span>
                     </div>
                 </div>
             </div>
@@ -52,8 +52,8 @@
                     </label>
                     <div class="col-xs-12 col-sm-6">
                         <textarea ng-if="state.mode=='edit'" class="form-control box-default"
-                                  name="comment" id="comment" ng-model="model.description"></textarea>
-                        <span ng-if="state.mode=='view'">{{model.description}}</span>
+                                  name="comment" id="comment" ng-model="modelsManager.selectedModel.description"></textarea>
+                        <span ng-if="state.mode=='view'">{{modelsManager.selectedModel.description}}</span>
                     </div>
                 </div>
             </div>
