--- a/webapp/app/partials/modelDesigner/conditions_settings.html
+++ b/webapp/app/partials/modelDesigner/conditions_settings.html
@@ -131,8 +131,8 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <ol class="text-info">
-                            <li>Not required,leave as default if cube always need full build</li>
-                            <li>Partition column will select 'date' or 'string' type column from fact table</li>
+                            <li>Partition date column not required,leave as default if cube always need full build</li>
+                            <li>Partition date column will select 'date' or 'string' type column from fact table</li>
                         </ol>
                     </div>
                 </div>
