--- a/webapp/app/partials/query/query_detail.html
+++ b/webapp/app/partials/query/query_detail.html
@@ -82,17 +82,15 @@
       </button>
       </span>
     <div class="pull-right" ng-if="curQuery.status=='success'">
-        <button class="btn btn-default btn-xs"
-                ng-click="curQuery.graph.show=!curQuery.graph.show;buildGraphMetadata(curQuery);resetGraph(curQuery);refreshGraphData(curQuery)">
+        <button class="btn btn-default btn-xs"  ng-click="curQuery.graph.show=!curQuery.graph.show;buildGraphMetadata(curQuery);resetGraph(curQuery);refreshGraphData(curQuery)">
             <span ng-if="!curQuery.graph.show"><i class="fa fa-bar-chart-o"></i> Visualization</span>
             <span ng-if="curQuery.graph.show"><i class="fa fa-list-ul"></i> Grid</span>
         </button>
-        <a class="btn btn-default btn-xs"
-           href="{{config.service.url}}query/format/csv?sql={{sanitate(curQuery.sql)}}&project={{curQuery.project}}" target="_blank"><i
-                class="fa fa-cloud-download"></i> Export</a>
-        <a class="btn btn-default btn-xs"
-           ng-click="refreshUi();"><i
-                ng-class="{true: 'fa fa-compress', false: 'fa fa-expand'}[ui.fullScreen]"></i></a>
+        <a class="btn btn-default btn-xs" href="{{config.service.url}}query/format/csv?sql={{sanitate(curQuery.sql)}}&project={{curQuery.project}}" target="_blank">
+            <i class="fa fa-cloud-download"></i> Export</a>
+        <a class="btn btn-default btn-xs" ng-click="refreshUi();">
+            <i ng-class="{true: 'fa fa-compress', false: 'fa fa-expand'}[ui.fullScreen]"></i>
+        </a>
     </div>
 
     <div ng-if="!curQuery.graph.show">
@@ -139,7 +137,6 @@
 
             <div class="graph_content">
                 <label>Dimensions</label>
-
                 <div>
                     <select
                             chosen style="width: 100%"
